--- a/templates/shared/navbar.html
+++ b/templates/shared/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
 
-	<a class="navbar-brand" href="{% url 'home' %}">ercin.org</a>
+	<a class="navbar-brand" href="{% url 'home' %}">iyi geldi</a>
 
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
@@ -18,6 +18,7 @@
 				<a class="nav-link" href="{% url 'contact' %}">Contact</a>
 			</li>
 
+			<!--
 			<li class="nav-item dropdown">
 				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 					Projects
@@ -30,6 +31,7 @@
 					<a class="dropdown-item" href="#">Project 4</a>
 				</div>
 			</li>
+			-->
 
 		</ul>
 
@@ -37,6 +39,27 @@
 			<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
 			<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
 		</form>
+
+		<ul class="navbar-nav">
+
+			{%if user.is_authenticated%}
+
+				<li class="nav-item">
+					<a class="nav-link" href="{% url 'user:logout' %}">Logout</a>
+				</li>
+
+				<li class="nav-item">
+					<a class="nav-link" href="{% url 'user:profile' %}">Profile</a>
+				</li>
+
+			{% else %}
+
+				<li class="nav-item {{login_active}}">
+					<a class="nav-link" href="{% url 'user:login' %}">Login</a>
+				</li>
+
+			{% endif %}
+		</ul>
 
 	</div>
 
